<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navProfile"
            android:icon="@drawable/ic_person"
            android:title="@string/profile" />
        <item
            android:id="@+id/navSessions"
            android:icon="@drawable/ic_calendar"
            android:title="@string/sessions" />
        <item
            android:id="@+id/navPayments"
            android:icon="@drawable/ic_payment"
            android:title="@string/payments" />
        <item
            android:id="@+id/navFeedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/feedback" />
        <item
            android:id="@+id/navChatbot"
            android:icon="@drawable/ic_help"
            android:title="@string/help_assistant" />
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/navLogout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>
